wtf fix update